--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,33 @@ body {
   font-weight: 700;
   border-radius: 8px;
 }
+.button {
+  width: 240px;
+  height: 56px;
+  border: 1px solid black;
+  background-color: #F59E0B;
+  color: white;
+  font-weight: 700;
+  border-radius: 8px;
+  font-size: 24px;
+}
+.trueButton {
+  width: 240px;
+  height: 56px;
+  border: 1px solid black;
+  background-color: #32f50b;
+  color: white;
+  font-weight: 700;
+  border-radius: 8px;
+  font-size: 24px;
+}
+.falseButton {
+  width: 240px;
+  height: 56px;
+  border: 1px solid black;
+  background-color: #f50b32;
+  color: white;
+  font-weight: 700;
+  border-radius: 8px;
+  font-size: 24px;
+}
