[Fixed] False and currect ans css issue

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
   width: 240px;
   height: 56px;
   border: 1px solid black;
-  background-color: #f50b32;
+  background-color: red;
   color: white;
   font-weight: 700;
   border-radius: 8px;
